--- a/introduction.tex
+++ b/introduction.tex
@@ -147,7 +147,7 @@ The thus loaded E2 can recognize potential target proteins via an exposed motif 
 \begin{figure}[h!]
 	\centering
 	\includegraphics[width=\textwidth]{img/sumo_chaining.pdf}
-	\caption{Steps in SUMO chain formation as proposed by Alontaga and colleagues~\cite{alontaga_rwd_2015}. An E2 noncovalently interacts with a SUMO modification of a target protein. A second E2 carrying a covalently bound second SUMO binds the first E2-SUMO complex, allowing for the first SUMO's N-terminal tail to enter the active site, where a lysine within the tail is forms a peptide bond with the second SUMO's C-terminus. Finally, the complex dissociates, leaving behind the newly formed SUMO chain. Images were generated using data from the following PDB structures: \texttt{3UIP}~\cite{gareau_determinants_2012}, \texttt{4Y1L}~\cite{}}
+	\caption{Steps in SUMO chain formation as proposed by Alontaga and colleagues~\cite{alontaga_rwd_2015}. An E2 noncovalently interacts with a SUMO modification of a target protein. A second E2 carrying a covalently bound second SUMO binds the first E2-SUMO complex, allowing for the first SUMO's N-terminal tail to enter the active site, where a lysine within the tail is forms a peptide bond with the second SUMO's C-terminus. Finally, the complex dissociates, leaving behind the newly formed SUMO chain. Images were generated using data from the following PDB structures: \texttt{3UIP}~\cite{gareau_determinants_2012}, \texttt{4Y1L}~\cite{alontaga_rwd_2015}}
 	\label{fig:sumo_chaining}
 \end{figure}
 
