--- a/chapter1.tex
+++ b/chapter1.tex
@@ -1,6 +1,7 @@
 
 
 \chapter[A comprehensive high-fidelity DMS framework]{A framework for comprehensive and high-fidelity Deep Mutational Scanning}
+\label{ch:data1}
 
 \section{Introduction}
 
