--- a/chapter2.tex
+++ b/chapter2.tex
@@ -265,6 +265,7 @@ A key requirement for DMS mapping is an en masse functional assay that can be ap
 \section{Methods}
 
 \subsection{DMS-TileSeq}
+DMS-TileSeq was performed for \gene{SUMO1}, \gene{TPK1}, \gene{NCS1}, and \gene{CALM1} as described in chapter~\cite{ch:data1}.
 
 \subsection{UBE2I interface analysis}
 
